# ChatPDF

./: Readme.MD  app.py  pyproject.toml
utils/: chatbot.py  text.py
