[tool.poetry]
name = "chatpdf"
version = "0.1.0"
description = "Chat PDF usando LangChain e OpenIA"
authors = ["Moises Alvarenga <moises.alvarenga@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
streamlit = "^1.31.1"
python-dotenv = "^1.0.1"
langchain = "^0.1.11"
pypdf2 = "^3.0.1"
faiss-cpu = "^1.8.0"
openai = "^1.13.3"
tiktoken = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
